base/istio-crds/resources/internal-service-gateway.yaml
# Copyright (c) [2024] Fergal Somers
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#      http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

# This is for illustrative purposes
# Create a Gateway service that uses the ingress gateway (on any host).
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-service-gateway
  namespace: istio-system
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8081
      name: http2
      protocol: HTTP
    hosts:
    - "*"
  # - port:
  #     number: 8444
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     mode: SIMPLE # enables HTTPS on this port
  #     serverCertificate: /etc/certs/servercert.pem # need to setup
  #     privateKey: /etc/certs/privatekey.pem
