base/istio-crds/resources/grafana-ingress.yaml
# Copyright (c) [2024] Fergal Somers
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#      http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
    from:
    - podSelector:
        matchLabels:
          istio: ingress
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
